tema-02/tests/tema2/06-resolve-id.ref
"06-resolve-id.cl", line 3:24, Semantic error: Undefined identifier u
"06-resolve-id.cl", line 4:24, Semantic error: Undefined identifier y
"06-resolve-id.cl", line 4:36, Semantic error: Undefined identifier v
Compilation halted
